--- a/svc/hecate/src/components/hud/hud.module.scss
+++ b/svc/hecate/src/components/hud/hud.module.scss
@@ -3583,6 +3583,19 @@ $light-shadow: rgba(0, 0, 0, 0.1);
     margin: 0.1rem -0.25rem;
   }
 
+  &.clickable {
+    cursor: pointer;
+    
+    &:hover {
+      color: $echo-blue;
+      transform: translateX(5px);
+      
+      .statusDot {
+        box-shadow: 0 0 10px rgba($echo-blue, 0.5);
+      }
+    }
+  }
+
   .statusLabel {
     color: rgba(255, 255, 255, 0.8);
     font-size: 0.75rem;
